tests/invalid/invalid-013.inox
Module Invalid013

Main() :
    var X := "abc" + 10
;
